2008-11-29  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/re-builder.el (reb-mode-map): Fix typo in menu tooltip.
	(reb-mode): Define with `define-derived-mode'.

2008-11-29  Karl Fogel  <kfogel@red-bean.com>

	* files.el (break-hardlink-on-save): New variable.
	(basic-save-buffer-2): Honor new variable break-hardlink-on-save.
	(file-precious-flag): Mention it in doc string.

2008-11-29  Miles Bader  <miles@gnu.org>

	* minibuffer.el (minibuffer-confirm-exit-commands): New variable.
	(minibuffer-complete-and-exit): Use it.

2008-11-29  Chong Yidong  <cyd@stupidchicken.com>

	* term/x-win.el (x-gtk-stock-cache): New hash table.
	(x-gtk-map-stock): Perform caching to prevent excess consing during

2008-11-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion--try-word-completion): Don't ignore
	partial-completion if it's the only style.

2008-11-28  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/re-builder.el (reb-auto-update): Remove redundant code.
	(re-builder): Reuse window displaying the *RE-Builder* buffer, if any.
	(reb-initialize-buffer): Update matches, in case we're reentering
	RE Builder mode.

2008-11-28  Chong Yidong  <cyd@stupidchicken.com>

	* complete.el (PC-do-complete-and-exit): Synch to 2008-11-24 change
	to minibuffer.el; recognize `confirm' and `confirm-after-completion'
	values for minibuffer-completion-confirm.

2008-11-28  Martin Rudalics  <rudalics@gmx.at>

	* emacs-lisp/eldoc.el (eldoc-docstring-first-line): Don't match
	any but the first "*" in a doc-string.

2008-11-28  Glenn Morris  <rgm@gnu.org>

	* format.el (format-write-file): Improve previous doc fix.

2008-11-27  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (use-empty-active-region, use-region-p)
	(region-active-p): Doc fix.

2008-11-27  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer): Fix handling of not-this-window
	argument.  (Bug#1415)

2008-11-27  Kenichi Handa  <handa@m17n.org>
